--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,14 @@
 {
   "development": {
     "username": "postgres",
-    "password": "Chikku@0804",
+    "password": "sreeni",
     "database": "database_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "Chikku@0804",
+    "password": "sreeni",
     "database": "database_test ",
     "host": "127.0.0.1",
     "dialect": "postgres"
