--- a/config/config.json
+++ b/config/config.json
@@ -2,20 +2,25 @@
   "development": {
     "username": "postgres",
     "password": "sreeni",
-    "database": "database_development",
+    "database": "wd-todo-l6",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
     "password": "sreeni",
-    "database": "database_test ",
+    "database": "wd-todo-l6",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-    
+    "use_env_variable": "DATABASE_URL",
     "dialect": "postgres",
-    "use_env_variable":"DATABASE_URL"
+    "dialectOptions": {
+      "ssl": {
+        "require": true,
+        "rejectUnauthorized": false
+      }
+    }
   }
 }
