--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "connect": "^3.7.0",
+    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "sequelize": "^6.23.0",
     "tiny-csrf": "^1.1.3"
@@ -30,10 +35,12 @@
   "devDependencies": {
     "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.24.0",
+    "express-session": "^1.17.3",
     "husky": "^8.0.1",
     "jest": "^29.1.1",
     "lint-staged": "^13.0.3",
     "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
     "prettier": "^2.7.1",
     "sequelize-cli": "^6.4.1",
     "supertest": "^6.2.4"
